--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "installCommand": "npm ci"
+  "dockerCommand": "docker build -t smartqueue-frontend . && docker run -p 3000:3000 smartqueue-frontend"
 }
